# android_kernel_device_modules_6.1

./: BUILD.bazel  Kbuild  Kconfig.ext  Makefile.ext  build.config.mtk_kernel_device_modules  build.sh
arch/arm64/boot/dts/: BUILD.bazel
arch/arm64/boot/dts/mediatek/: Makefile  mt6363.dtsi  mt6897.dts
arch/arm64/configs/: mgk_64_k61_defconfig
drivers/char/: Makefile
drivers/char/rpmb/: rpmb-mtk.c
drivers/gpu/drm/panel/: Kconfig  Makefile  panel-n11a-41-02-0b-dsc-vdo.c
drivers/input/fingerprint/: Kconfig
drivers/input/fingerprint/xiaomi_fp/: fp_driver.c  fp_driver.h  fp_netlink.c  fp_platform.c
drivers/input/misc/: Makefile
drivers/input/touchscreen/: Kconfig  Makefile
drivers/input/touchscreen/ft3683g/: Kconfig  Makefile  focaltech_core.c  focaltech_ex_fun.c  focaltech_flash.c
drivers/input/touchscreen/goodix_9916r/: Makefile  goodix_brl_hw.c  goodix_brl_spi.c  goodix_ts_core.c
drivers/misc/mediatek/: Kconfig  Makefile
drivers/misc/xiaomi/: Kconfig  Makefile
drivers/power/supply/: Kconfig  adapter_class.c  adapter_class.h  charger_class.c  charger_class.h  mt6375-charger.c  mtk_basic_charger.c  mtk_battery.c  mtk_battery.h  mtk_charger.c  mtk_charger.h  mtk_pd_adapter.c  pd_cp_manager.c  pd_cp_manager.h  step_jeita_charge.h
drivers/regulator/: Kconfig  Makefile  wl2868c.c
drivers/spi/: spi-mt65xx.c
drivers/thermal/mediatek/: Makefile
drivers/thermal/xiaomi/: mi_thermal_interface.c
kernel/configs/: duchamp.config
kernel/kleaf/: _setup_env.sh  mgk_64_k61.bzl
sound/soc/codecs/: Kconfig  Makefile  mt6368-accdet.c  mt6368.c
(+53 files in other folders)
